<resources>
    <string name="app_name">Habiton</string>
    <string name="channel_name">Habit Notification</string>
    <string name="channel_description">Habit Reminder</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="all_habits">All Habits</string>
    <string name="best_streak">Best Streak</string>
    <string name="completion">Completion</string>
    <string name="week">Week</string>
    <string name="todo">TODO</string>
    <string name="analytics">Analytics</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="rate">Rate</string>
    <string name="streak">Streak</string>
    <string name="h">H</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="btn">btn</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="x">X</string>
    <string name="add_emoji">Add Emoji</string>
    <string name="add_habits">Add Habits</string>
    <string name="edit_habits">Edit Habits</string>
    <string name="title_hint">Title</string>
    <string name="habits">Habits</string>
    <string name="settings">Settings</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="back">back</string>
    <string name="notifications">Notifications</string>
    <string name="select">Select</string>
    <string name="check">Check</string>
    <string name="morning_reminder">Morning Reminder</string>
    <string name="evening_reminder">Evening Reminder</string>

</resources>