<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"

            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border20"
                android:backgroundTint="@color/module"
                android:orientation="vertical"
                android:padding="18dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/jan"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/feb"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/mar"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/apr"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/may"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/jun"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/jul"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/aug"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/sep"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/oct"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/nov"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/dec"
                        android:textAlignment="textStart"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                </LinearLayout>

                <GridLayout
                    android:id="@+id/buttonGridYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </GridLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
