<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginHorizontal="10dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"

        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border20"
            android:backgroundTint="@color/module"
            android:orientation="vertical"
            android:padding="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/thu"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/sat"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/sun"
                    android:textAlignment="center"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/buttonGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </GridLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
