<?xml version="1.0" encoding="utf-8"?>
<!-- Erstellt von Finn Garrels -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="habit"
            type="de.hsos.habiton.database.models.Habit" />

        <variable
            name="tracking"
            type="de.hsos.habiton.database.models.HabitTracking" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backing_light"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/title_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/page_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_semibold"
                        android:text="@string/analytics"
                        android:textAlignment="center"
                        android:textColor="@color/highlight_dark"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rfxt5i6jynk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/menuButton"
                        style="@style/CustomDefaultButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:fontFamily="@font/inter_semibold"
                        android:textSize="16sp"
                        android:letterSpacing="0"
                        android:padding="15dp"
                        android:text="@string/all_habits"
                        android:minHeight="75dp"
                        app:iconSrc="@{habit.icon}"
                        app:iconGravity="textStart"
                        app:iconTint="@null"
                        app:iconSize="30dp"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <!-- Toggle-Gruppe -->
                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggleButton"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/module"
                        app:singleSelection="true">

                        <Button

                            android:id="@+id/button1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@drawable/switch_button_backgroundcolor"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/week"
                            android:textColor="@drawable/switch_button_textcolor"
                            android:textSize="16sp"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@drawable/switch_button_backgroundcolor"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/month"
                            android:textColor="@drawable/switch_button_textcolor"
                            android:textSize="16sp"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@drawable/switch_button_backgroundcolor"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/year"
                            android:textColor="@drawable/switch_button_textcolor"
                            android:textSize="16sp"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/history_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <!-- Erste Karte -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/module"
                        app:cardElevation="0dp"
                        app:strokeWidth="0dp"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/best_streak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text=""
                                android:textSize="34sp" />

                            <LinearLayout
                                android:id="@+id/streak_icontext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:id="@+id/streak_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginEnd="7dp"
                                    android:src="@drawable/streak_green"
                                    tools:ignore="ImageContrastCheck"
                                    android:contentDescription="@string/todo" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_semibold"
                                    android:text="@string/best_streak"
                                    android:textAlignment="center"
                                    android:textColor="#78909C"
                                    android:textSize="16sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/module"
                        app:cardElevation="0dp"
                        app:strokeWidth="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"

                            android:orientation="vertical"
                            tools:ignore="ExtraText">

                            <TextView
                                android:id="@+id/completion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text=""
                                android:textSize="34sp" />

                            <LinearLayout
                                android:id="@+id/completion_icon_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:id="@+id/completion_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginEnd="7dp"
                                    android:src="@drawable/completion"
                                    tools:ignore="ContentDescription,ImageContrastCheck"
                                    android:contentDescription="@string/rate" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_semibold"
                                    android:text="@string/completion"
                                    android:textAlignment="center"
                                    android:textColor="#78909C"
                                    android:textSize="16sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/analytics_habit_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="70dp"
                        android:background="@drawable/border20"
                        android:backgroundTint="@color/module"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:paddingRight="10dp" />
                </RelativeLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>